# inpdl

./: CMakeLists.txt  README.md  inpdl  main.cpp
cmake/: toolchain-cosmocc.cmake
lib/cJson/: cJson.c
src/: ketopt.h  main.c  main.cpp  nix_processor.h  nix_processor.hpp  options.h  processor.hpp  testcases.h
